# baby-camera

./: Cargo.toml  index.html
.cargo/: config.toml
res/: audio_stream_command.toml  command.toml  libcamera_video_streaming_command.toml  piped_libcamera_video_streaming_command.toml
simple_streaming/: README.md
simple_streaming/src/: main.rs
src/: main.rs
src/detail/: generic_stream.rs  mod.rs  polling_task.rs  stdin_stream.rs  tcp_stream.rs
src/detail/http/: external_process.rs  mod.rs  server.rs
streaming_redirect_server/: Cargo.toml
streaming_redirect_server/src/: index.html  main.rs
